igw.tf
#Define IGW
resource "aws_internet_gateway" "IGW" {
	vpc_id = "${aws_vpc.Myvpc.id}"
	
	tags {
	Name = "aws-IGW"
	}
}
